# py-brand

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: publish.yml
src/: __main__.py
src/bvn/: colours.py
src/bvn_values/: __init__.py  __main__.py  studios.py  values.py
src/bvn_values/cool_stuff/: __init__.py  thing.py
