[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bvn_values"
dynamic = ["version"]
description = "BVN brand values: colours, studio addresses, and company information."
authors = [{name = "Ben Doherty", email = "ben_doherty@bvn.com.au"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://www.bvn.com.au"
Repository = "https://github.com/bvn-architecture/py-brand"
PyPI = "https://pypi.org/project/bvn_values/"

[tool.hatch.version]
path = "src/bvn_values/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bvn_values"]
